# gkx

./: README.md  pyproject.toml
gkx/: __init__.py
gkx/cli/: __init__.py  out.py  run.py
gkx/mdx/: README.md  __init__.py  batcher.py  chunker.py  dataset.py  interface.py  nve.py  nvt.py  utils.py
gkx/utils/: __init__.py  trees.py
tests/integration/lj_nve/: gk.yaml  gk_longer.yaml  test.sh
tests/integration/lj_nvt/: md.yaml  test.sh
tests/unit/: test_mdx_chunker.py  test_utils_trees.py
